ex04/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restaurant-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: kong
  rules:
  - host: italian.food.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: italian-service
            port:
              number: 80
  - host: chinese.food.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chinese-service
            port:
              number: 80
